--- a/src/UsersApi/appsettings.json
+++ b/src/UsersApi/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=UsersDb;User Id=sa;Password=Pass@word123;TrustServerCertificate=True;"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
