Use RabbitMQ and Sql server in UsersApi, and update its dockerfile to include Core project

--- a/src/UsersApi/Dockerfile
+++ b/src/UsersApi/Dockerfile
@@ -1,12 +1,12 @@
-﻿# Build stage
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
-WORKDIR /app
-COPY *.csproj ./
-RUN dotnet restore
-COPY . ./
-RUN dotnet publish -c Release -o out
+﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
+WORKDIR /src
+COPY ["Core/Core.csproj", "Core/"]
+COPY ["UsersApi/UsersApi.csproj", "UsersApi/"]
+RUN dotnet restore "UsersApi/UsersApi.csproj"
+COPY . .
+WORKDIR "/src/UsersApi"
+RUN dotnet publish -c Release -o /app/out
 
-# Runtime stage
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
 COPY --from=build-env /app/out .
