--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # SQL Server for UsersAPI
   usersdb:
@@ -9,9 +7,15 @@ services:
       - SA_PASSWORD=Pass@word123
       - MSSQL_PID=Express
     ports:
-      - "1433:1433"
+      - "11433:1433"
     volumes:
       - usersdb-data:/var/opt/mssql
+    healthcheck:
+      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "Pass@word123", "-Q", "SELECT 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 10
+      start_period: 30s
 
   # RabbitMQ Message Broker
   rabbitmq:
@@ -41,8 +45,10 @@ services:
       - "5001:8080"
       - "5002:8081"
     depends_on:
-      - usersdb
-      - rabbitmq
+      usersdb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_started
 
 volumes:
   usersdb-data:
