--- a/src/TasksApi/TasksApi.csproj
+++ b/src/TasksApi/TasksApi.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Core.csproj" />
+    </ItemGroup>
+
 </Project>
