Implement Jwt in TasksApi and Extract User's info from Token insted of requiring it in request DTOs

--- a/src/TasksApi/appsettings.json
+++ b/src/TasksApi/appsettings.json
@@ -13,5 +13,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "strong secret key for jwt encryption",
+    "Issuer": "TaskFlow",
+    "Audience": "TaskFlowUser",
+    "ExpiryMinutes": 30
+  }
 }
