--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
     </ItemGroup>
 
 </Project>
