Update docker-compose file, unify the user's id across all endpoints (via external id), add a small business logic to control note adding and task status changing

--- a/src/TasksApi/Dockerfile
+++ b/src/TasksApi/Dockerfile
@@ -1,10 +1,10 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
 WORKDIR /src
 COPY ["Core/Core.csproj", "Core/"]
-COPY ["UsersApi/UsersApi.csproj", "UsersApi/"]
-RUN dotnet restore "UsersApi/UsersApi.csproj"
+COPY ["TasksApi/TasksApi.csproj", "TasksApi/"]
+RUN dotnet restore "TasksApi/TasksApi.csproj"
 COPY . .
-WORKDIR "/src/UsersApi"
+WORKDIR "/src/TasksApi"
 RUN dotnet publish -c Release -o /app/out
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
@@ -13,4 +13,4 @@ COPY --from=build-env /app/out .
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 EXPOSE 8080
 EXPOSE 8081
-ENTRYPOINT ["dotnet", "UsersApi.dll"]
+ENTRYPOINT ["dotnet", "TasksApi.dll"]
