Add grpc to both UsersApi and TasksApi to sync registered users on TasksApi startup

--- a/src/TasksApi/appsettings.json
+++ b/src/TasksApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,21433;Database=UsersDb;User Id=sa;Password=Pass@word123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,21433;Database=TasksDb;User Id=sa;Password=Pass@word123;TrustServerCertificate=True;"
   },
   "RabbitMQ": {
     "Host": "localhost",
@@ -19,5 +19,18 @@
     "Issuer": "TaskFlow",
     "Audience": "TaskFlowUser",
     "ExpiryMinutes": 30
+  },
+  "UsersServiceGrpcUrl": "http://localhost:8082",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080",
+        "Protocols": "Http1"
+      },
+      "Http2": {
+        "Url": "http://0.0.0.0:8081",
+        "Protocols": "Http2"
+      }
+    }
   }
 }
