--- a/src/UsersApi/appsettings.json
+++ b/src/UsersApi/appsettings.json
@@ -19,5 +19,21 @@
     "Issuer": "TaskFlow",
     "Audience": "TaskFlowUser",
     "ExpiryMinutes": 30
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080",
+        "Protocols": "Http1"
+      },
+      "Http2": {
+        "Url": "http://0.0.0.0:8081",
+        "Protocols": "Http2"
+      },
+      "Grpc": {
+        "Url": "http://0.0.0.0:8082",
+        "Protocols": "Http2"
+      }
+    }
   }
 }
