--- a/src/TasksApi/TasksApi.csproj
+++ b/src/TasksApi/TasksApi.csproj
@@ -8,6 +8,12 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="16.0.0" />
+        <PackageReference Include="Google.Protobuf" Version="3.33.2" />
+        <PackageReference Include="Grpc.Net.Client" Version="2.76.0" />
+        <PackageReference Include="Grpc.Tools" Version="2.76.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
@@ -28,6 +34,10 @@
         <Link>.dockerignore</Link>
         <DependentUpon>Dockerfile</DependentUpon>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Protobuf Include="Protos\Users.proto" GrpcServices="Client"/>
     </ItemGroup>
 
 </Project>
