--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
+      <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
     </ItemGroup>
 
 </Project>
