Move Jwt to separate component (Core was depending on ASP.Net Core!), Implement Notification Service

--- a/src/TasksApi/TasksApi.csproj
+++ b/src/TasksApi/TasksApi.csproj
@@ -26,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Core.JwtAuth\Core.JwtAuth.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
