--- a/src/UsersApi/UsersApi.csproj
+++ b/src/UsersApi/UsersApi.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Core.JwtAuth\Core.JwtAuth.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
