--- a/src/Core.JwtAuth/Core.JwtAuth.csproj
+++ b/src/Core.JwtAuth/Core.JwtAuth.csproj
@@ -7,9 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
-      <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.11" />
     </ItemGroup>
 
 </Project>
