--- a/src/TasksApi/Dockerfile
+++ b/src/TasksApi/Dockerfile
@@ -1,6 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
 WORKDIR /src
 COPY ["Core/Core.csproj", "Core/"]
+COPY ["Core.JwtAuth/Core.JwtAuth.csproj", "Core.JwtAuth/"]
 COPY ["TasksApi/TasksApi.csproj", "TasksApi/"]
 RUN dotnet restore "TasksApi/TasksApi.csproj"
 COPY . .
