--- a/src/UsersApi/Dockerfile
+++ b/src/UsersApi/Dockerfile
@@ -1,6 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
 WORKDIR /src
 COPY ["Core/Core.csproj", "Core/"]
+COPY ["Core.JwtAuth/Core.JwtAuth.csproj", "Core.JwtAuth/"]
 COPY ["UsersApi/UsersApi.csproj", "UsersApi/"]
 RUN dotnet restore "UsersApi/UsersApi.csproj"
 COPY . .
