--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Image
-        run: docker build -f ${{ matrix.dockerfile }} -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:latest .
+        run: docker build -f ${{ matrix.dockerfile }} -t ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:latest src
       - name: Push Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:latest
