--- a/src/UsersApi/appsettings.Production.json
+++ b/src/UsersApi/appsettings.Production.json
@@ -1,11 +1,39 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=TODO:clusterip;Database=PlatformServiceDb;User Id=sa;Password=password;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,11433;Database=UsersDb;User Id=sa;Password=Pass@word123;TrustServerCertificate=True;"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "strong secret key for jwt encryption",
+    "Issuer": "TaskFlow",
+    "Audience": "TaskFlowUser",
+    "ExpiryMinutes": 30
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080",
+        "Protocols": "Http1"
+      },
+      "Http2": {
+        "Url": "http://0.0.0.0:8081",
+        "Protocols": "Http2"
+      },
+      "Grpc": {
+        "Url": "http://0.0.0.0:8082",
+        "Protocols": "Http2"
+      }
     }
   }
 }
